# Practice-gtest

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
src/: consts.cpp  consts.hpp  names.hpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  basic_tests.cpp  cmake_install.cmake
